# graphene3-demo1

./: .gitignore  README.md  pyproject.toml
demo/: app.py  server.py
demo/schema/: __init__.py  queries.py  subscriptions.py
demo/schema/mutations/: __init__.py  update_status.py
demo/schema/types/: __init__.py  coordinate_type.py  search_metadata_type.py  search_result_type.py  tweet_type.py  user_type.py
